tests/snapshots/snapshots__pipeline@replayable_reject.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/replayable_reject.pr
---
== tokens ==
VOpen Effect UIdent("World") VOpen Ident("spew") LParen KwInt RParen Colon KwInt VClose VSemi Replayable Fn Ident("leak") LParen RParen Eq Ident("spew") LParen Int(IntLit { value: 1, suffix: None }) RParen VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "World",
            params: [],
            ops: [
                EffOp {
                    name: "spew",
                    params: [
                        Int,
                    ],
                    ret: Int,
                    grade: Many,
                    span: 15..19,
                },
            ],
            span: 0..30,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "leak",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "spew",
                        ),
                        span: 55..59,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 1,
                                    suffix: None,
                                },
                            ),
                            span: 60..61,
                        },
                    ],
                ),
                span: 55..62,
            },
            wheres: [],
            replayable: true,
            span: 32..62,
        },
    ],
}

== types ==
leak : () -> Int ! {World}

== core (cbpv) ==
fn leak() =
  return 1 to t@0
  do spew(t@0)

== replayable ==
[E1998] Type Error: function `leak` is marked `replayable` but performs non-replayable effect `World`; a replayable function may use only Console, FileSystem, Random, Env, Clock, Output, Exn, Fail
   ╭─[ <source>:4:1 ]
   │
 4 │ replayable fn leak() = spew(1)
   │ ───────────────┬──────────────  
   │                ╰──────────────── function `leak` is marked `replayable` but performs non-replayable effect `World`; a replayable function may use only Console, FileSystem, Random, Env, Clock, Output, Exn, Fail
───╯
