tests/snapshots/snapshots__pipeline@reuseclash.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/reuseclash.pr
---
== tokens ==
VOpen Type UIdent("Pair") Eq UIdent("Pair") LParen KwInt Comma KwInt RParen VSemi Fn Ident("bump") LParen Ident("p") Colon UIdent("Pair") Comma Ident("_reuse_p") Colon KwInt RParen Colon UIdent("Pair") Eq VOpen Match Ident("p") Of VOpen UIdent("Pair") LParen Ident("a") Comma Ident("b") RParen FatArrow UIdent("Pair") LParen Ident("a") Plus Ident("_reuse_p") Comma Ident("b") RParen VClose VClose VSemi Fn Ident("main") LParen RParen Eq VOpen Match Ident("bump") LParen UIdent("Pair") LParen Int(IntLit { value: 1, suffix: None }) Comma Int(IntLit { value: 2, suffix: None }) RParen Comma Int(IntLit { value: 10, suffix: None }) RParen Of VOpen UIdent("Pair") LParen Ident("x") Comma Ident("y") RParen FatArrow Ident("println") LParen Ident("x") Plus Ident("y") RParen VClose VClose VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "Pair",
            params: [],
            param_kinds: [],
            ctors: [
                Ctor {
                    name: "Pair",
                    args: [
                        Int,
                        Int,
                    ],
                    fields: None,
                    span: 146..150,
                },
            ],
            deriving: [],
            newtype: false,
            span: 134..160,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "bump",
            params: [
                Param {
                    name: "p",
                    ty: Some(
                        Con(
                            "Pair",
                            [],
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
                Param {
                    name: "_reuse_p",
                    ty: Some(
                        Int,
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Con(
                    "Pair",
                    [],
                ),
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Match(
                    Spanned {
                        node: Var(
                            "p",
                        ),
                        span: 213..214,
                    },
                    [
                        Arm {
                            pat: Spanned {
                                node: Ctor(
                                    "Pair",
                                    [
                                        Spanned {
                                            node: Var(
                                                "a",
                                            ),
                                            span: 227..228,
                                        },
                                        Spanned {
                                            node: Var(
                                                "b",
                                            ),
                                            span: 230..231,
                                        },
                                    ],
                                ),
                                span: 222..232,
                            },
                            body: Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "Pair",
                                        ),
                                        span: 236..240,
                                    },
                                    [
                                        Spanned {
                                            node: Bin(
                                                Add,
                                                Spanned {
                                                    node: Var(
                                                        "a",
                                                    ),
                                                    span: 241..242,
                                                },
                                                Spanned {
                                                    node: Var(
                                                        "_reuse_p",
                                                    ),
                                                    span: 245..253,
                                                },
                                            ),
                                            span: 241..253,
                                        },
                                        Spanned {
                                            node: Var(
                                                "b",
                                            ),
                                            span: 255..256,
                                        },
                                    ],
                                ),
                                span: 236..257,
                            },
                        },
                    ],
                ),
                span: 207..257,
            },
            wheres: [],
            span: 162..257,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Match(
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "bump",
                                ),
                                span: 279..283,
                            },
                            [
                                Spanned {
                                    node: Call(
                                        Spanned {
                                            node: Var(
                                                "Pair",
                                            ),
                                            span: 284..288,
                                        },
                                        [
                                            Spanned {
                                                node: Int(
                                                    IntLit {
                                                        value: 1,
                                                        suffix: None,
                                                    },
                                                ),
                                                span: 289..290,
                                            },
                                            Spanned {
                                                node: Int(
                                                    IntLit {
                                                        value: 2,
                                                        suffix: None,
                                                    },
                                                ),
                                                span: 292..293,
                                            },
                                        ],
                                    ),
                                    span: 284..294,
                                },
                                Spanned {
                                    node: Int(
                                        IntLit {
                                            value: 10,
                                            suffix: None,
                                        },
                                    ),
                                    span: 296..298,
                                },
                            ],
                        ),
                        span: 279..299,
                    },
                    [
                        Arm {
                            pat: Spanned {
                                node: Ctor(
                                    "Pair",
                                    [
                                        Spanned {
                                            node: Var(
                                                "x",
                                            ),
                                            span: 312..313,
                                        },
                                        Spanned {
                                            node: Var(
                                                "y",
                                            ),
                                            span: 315..316,
                                        },
                                    ],
                                ),
                                span: 307..317,
                            },
                            body: Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "println",
                                        ),
                                        span: 321..328,
                                    },
                                    [
                                        Spanned {
                                            node: Bin(
                                                Add,
                                                Spanned {
                                                    node: Var(
                                                        "x",
                                                    ),
                                                    span: 329..330,
                                                },
                                                Spanned {
                                                    node: Var(
                                                        "y",
                                                    ),
                                                    span: 333..334,
                                                },
                                            ),
                                            span: 329..334,
                                        },
                                    ],
                                ),
                                span: 321..335,
                            },
                        },
                    ],
                ),
                span: 273..335,
            },
            wheres: [],
            span: 259..335,
        },
    ],
}

== types ==
bump : (Pair, Int) -> Pair
main : () -> Unit ! {IO}

== core (cbpv) ==
fn bump(p, _reuse_p) =
  return p to t@0
  case t@0 of
    Pair(a, b) =>
      return a to t@1
      return _reuse_p to t@2
      t@1 + t@2 to t@3
      return b to t@4
      return Pair(t@3, t@4)
fn main() =
  return 1 to t@5
  return 2 to t@6
  return Pair(t@5, t@6) to t@7
  return 10 to t@8
  bump(t@7, t@8) to t@9
  case t@9 of
    Pair(x, y) =>
      return x to t@10
      return y to t@11
      t@10 + t@11 to t@12
      print t@12 to t@13
      print_nl

== fbip (rc) ==
fn bump(p, _reuse_p) =
  return p to t@0
  case t@0 of
    Pair(a, b) =>
      dup a
      dup b
      reuse_token t@0 to reuse#t@0
      return a to t@1
      return _reuse_p to t@2
      dup t@2
      t@1 + t@2 to t@3
      return b to t@4
      reuse reuse#t@0 as Pair(t@3, t@4)
fn main() =
  return 1 to t@5
  return 2 to t@6
  return Pair(t@5, t@6) to t@7
  return 10 to t@8
  bump(t@7, t@8) to %rc0
  drop t@8
  return %rc0 to t@9
  case t@9 of
    Pair(x, y) =>
      dup x
      dup y
      drop t@9
      return x to t@10
      return y to t@11
      t@10 + t@11 to t@12
      print t@12 to t@13
      drop t@13
      print_nl

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [798 x i8] c"scheme  prism-core-hash-v2\0Abundle  0b6e92ccb03f1350c3e4039173e2c3065ae012ce764dfa821f0581698a07d82f\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:0b6e92ccb03f1350c3e4039173e2c3065ae012ce764dfa821f0581698a07d82f\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_bump  0e2f4d23e7923d9b46b2eef455134c45ff9163cc0fbc7c61399a380a074666c6  bump\0Afn      prismfn_main  e02996c36b0d51e6364b334970c24e93217e0e910eef6a0b442e34cd9958b5df  main\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [916 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  0b6e92ccb03f1350c3e4039173e2c3065ae012ce764dfa821f0581698a07d82f\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:0b6e92ccb03f1350c3e4039173e2c3065ae012ce764dfa821f0581698a07d82f\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_bump 0e2f4d23e7923d9b46b2eef455134c45ff9163cc0fbc7c61399a380a074666c6 bump arity 2 slots abi-word[arg0=%a0:word,arg1=%a1:word]\0Astate prismfn_main e02996c36b0d51e6364b334970c24e93217e0e910eef6a0b442e34cd9958b5df main arity 0 slots abi-word[]\0A\00", section ",.prism_kont", align 1
@.kont_symbol1 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash1 = private constant [65 x i8] c"e02996c36b0d51e6364b334970c24e93217e0e910eef6a0b442e34cd9958b5df\00"
@.kont_name1 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol1, ptr @.kont_hash1, ptr @.kont_name1 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  call void @prism_print_int(i64 27)
  call void @prism_rc_dec(i64 27)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  ret i64 0
}

; Function Attrs: nounwind
declare void @prism_print_int(i64) #0

; Function Attrs: nounwind
declare void @prism_rc_dec(i64) #0

; Function Attrs: nounwind
declare void @prism_print_nl() #0

attributes #0 = { nounwind }

== run ==
output: [13]
result: ()
